--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -190,7 +190,7 @@
     <string name="medium">Moyenne</string>
     <string name="large">Large</string>
     <string name="extra_large">Extra large</string>
-    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
+    <string name="password_protect_hidden_items">Visibilité des éléments protégés par un mot de passe</string>
 
     <!-- About -->
     <string name="about">À propos</string>
@@ -206,7 +206,7 @@
     <string name="donate_underlined"><u>Donner</u></string>
     <string name="follow_us">Suivez nous:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="additional_info">Additional info</string>
+    <string name="additional_info">Info supplémentaire</string>
     <string name="gruveo">Êtes-vous à la recherche d\'une appli d\'appels vidéo simple et anonyme ? Essayez mon autre projet</string>
     <string name="app_version">Version appli: %1$s</string>
     <string name="device_os">OS appareil: %1$s</string>
