adding some RemoteViews extension functions

--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -53,7 +53,7 @@
     <string name="create_new">新規作成</string>
     <string name="folder">フォルダー</string>
     <string name="file">ファイル</string>
-    <string name="create_new_folder">フォルダーを新規作成</string>
+    <string name="create_new_folder">フォルダ新規作成</string>
     <string name="name_taken">同名のファイルまたはフォルダーが既に存在しています</string>
     <string name="invalid_name">名前に無効な文字が含まれています</string>
     <string name="empty_name">名前を入力してください</string>
