show a toast if fingerprint authentication fails

--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="fingerprint">Fingerprint</string>
     <string name="add_fingerprint">Add fingerprint</string>
     <string name="place_finger">Please place your finger on the fingerprint sensor</string>
+    <string name="authentication_failed">Authentication failed</string>
     <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
 
     <!-- Times -->
