--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -169,6 +169,7 @@
     <string name="add_fingerprint">Add fingerprint</string>
     <string name="place_finger">Please place your finger on the fingerprint sensor</string>
     <string name="authentication_failed">Authentication failed</string>
+    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
     <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
 
     <!-- Times -->
