--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -74,6 +74,7 @@
     <string name="confirm_storage_access_title">Pasirinkti iðorinës talpyklos prieigà</string>
     <string name="confirm_storage_access_text">Norint suteikti prieigà, pasirinkite pagrindiná SD kortelës aplankà kitame lange</string>
     <string name="confirm_storage_access_text_sd">Jei nematote SD kortelës, pabandykite tai</string>
+    <string name="confirm_selection">Confirm selection</string>
 
     <plurals name="items">
         <item quantity="one">%1$d elementas</item>
