--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -2,7 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="search">Поиск</string>
-    <string name="save_as">Сохранить как</string>
+    <string name="save_as">Сохранить как...</string>
     <string name="file_saved">Файл успешно сохранён</string>
     <string name="invalid_file_format">Недопустимый формат файла</string>
     <string name="no_storage_permissions">Нужно разрешение для доступа к памяти</string>
@@ -26,9 +26,9 @@
     <!-- Copy / Move -->
     <string name="copy">Копировать</string>
     <string name="move">Переместить</string>
-    <string name="copy_move">Копировать / Переместить</string>
-    <string name="copy_to">Копировать в</string>
-    <string name="move_to">Переместить в</string>
+    <string name="copy_move">Копировать/переместить</string>
+    <string name="copy_to">Копировать в...</string>
+    <string name="move_to">Переместить в...</string>
     <string name="source">Путь источника</string>
     <string name="destination">Путь назначения</string>
     <string name="select_destination">Выберите путь назначения</string>
@@ -166,15 +166,15 @@
     <string name="insert_pattern">Установить ключ</string>
     <string name="wrong_pattern">Неверный графический ключ</string>
     <string name="repeat_pattern">Повторить ключ</string>
-    <string name="fingerprint">Fingerprint</string>
-    <string name="add_fingerprint">Add fingerprint</string>
-    <string name="place_finger">Please place your finger on the fingerprint sensor</string>
-    <string name="authentication_failed">Authentication failed</string>
-    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
-    <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
-    <string name="go_to_settings">Go to Settings</string>
+    <string name="fingerprint">Отпечаток пальца</string>
+    <string name="add_fingerprint">Добавить отпечаток</string>
+    <string name="place_finger">Пожалуйста, поместите палец на датчик отпечатков.</string>
+    <string name="authentication_failed">Ошибка аутентификации</string>
+    <string name="authentication_blocked">Аутентификация заблокирована, повторите попытку через некоторое время</string>
+    <string name="no_fingerprints_registered">У вас нет зарегистрированных отпечатков пальцев, добавьте их в настройках вашего устройства</string>
+    <string name="go_to_settings">Перейдите в настройки</string>
     <string name="protection_setup_successfully">Пароль успешно установлен. Пожалуйста, переустановите приложение в случае, если вы его забудете.</string>
-    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
+    <string name="fingerprint_setup_successfully">Установка защиты выполнена успешно. Переустановите приложение в случае возникновения проблем с её отключением.</string>
 
     <!-- Times -->
     <plurals name="seconds">
@@ -195,7 +195,7 @@
     <!-- Settings -->
     <string name="settings">Настройки</string>
     <string name="customize_colors">Настроить цвета</string>
-    <string name="show_hidden">Показать скрытые папки</string>
+    <string name="show_hidden">Показывать скрытые папки</string>
     <string name="font_size">Размер шрифта</string>
     <string name="small">Мелкий</string>
     <string name="medium">Нормальный</string>
