--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -73,8 +73,8 @@
     <string name="select_file">Selecionar ficheiro</string>
     <string name="confirm_storage_access_title">Confirmação de acesso ao armazenamento externo</string>
     <string name="confirm_storage_access_text">Por favor escolha a pasta raiz do cartão SD no próximo ecrã para conceder acesso de escrita</string>
-    <string name="confirm_storage_access_text_sd">Senão conseguir ver o catão SD, tente isto</string>
-    <string name="confirm_selection">Confirm selection</string>
+    <string name="confirm_storage_access_text_sd">Senão conseguir ver o cartão SD, tente isto</string>
+    <string name="confirm_selection">Confirmar seleção</string>
 
     <plurals name="items">
         <item quantity="one">%1$d item</item>
@@ -102,7 +102,7 @@
     <string name="exposure_time">Tempo de exposição</string>
     <string name="iso_speed">Velocidade ISO</string>
     <string name="f_number">Número F</string>
-    <string name="camera">Camera</string>
+    <string name="camera">Câmara</string>
     <string name="exif">EXIF</string>
 
     <!-- Color customization -->
@@ -166,15 +166,15 @@
     <string name="insert_pattern">Introduza o padrão</string>
     <string name="wrong_pattern">Padrão inválido</string>
     <string name="repeat_pattern">Repita o padrão</string>
-    <string name="fingerprint">Fingerprint</string>
-    <string name="add_fingerprint">Add fingerprint</string>
-    <string name="place_finger">Please place your finger on the fingerprint sensor</string>
-    <string name="authentication_failed">Authentication failed</string>
-    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
-    <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
-    <string name="go_to_settings">Go to Settings</string>
-    <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
-    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
+    <string name="fingerprint">Impressão digital</string>
+    <string name="add_fingerprint">Adicionar impressão digital</string>
+    <string name="place_finger">Coloque o seu dedo no sendor de impressões digitais</string>
+    <string name="authentication_failed">Falha de autenticação</string>
+    <string name="authentication_blocked">Atenticação bloqueada. Por favor tente mais tarde.</string>
+    <string name="no_fingerprints_registered">Não tem impressões digitais registadas. Adicione a sua impressão digital nas definições do dispositivo.</string>
+    <string name="go_to_settings">Ir para Definições</string>
+    <string name="protection_setup_successfully">Palavra-passe definida com sucesso. Deve reinstalar esta aplicação se não se lembrar da palavra-passe.</string>
+    <string name="fingerprint_setup_successfully">Proteção definida com sucesso. Deve reinstalar a aplicação se ocorrerem problemas.</string>
 
     <!-- Times -->
     <plurals name="seconds">
