--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -69,16 +69,16 @@
     <string name="apply_to_all">Bei allen Konflikten anwenden</string>
 
     <!-- File picker -->
-    <string name="select_folder">Wähle einen Ordner aus</string>
-    <string name="select_file">Wähle eine Datei aus</string>
+    <string name="select_folder">Ordner auswählen</string>
+    <string name="select_file">Datei auswählen</string>
     <string name="confirm_storage_access_title">Bitte Zugriff auf externen Speicher bestätigen</string>
-    <string name="confirm_storage_access_text">Bitte wähle das Hauptverzeichnis deiner SD-Karte auf dem nächsten Bildschirm, um Schreibzugriff zu erlauben</string>
-    <string name="confirm_storage_access_text_sd">Wenn die SD-Karte nicht sichtbar ist, versuche das</string>
-    <string name="confirm_selection">Confirm selection</string>
+    <string name="confirm_storage_access_text">Bitte am nächsten Bildschirm das Hauptverzeichnis deiner SD-Karte auswählen, um Schreibzugriff zu erlauben</string>
+    <string name="confirm_storage_access_text_sd">Wenn die SD-Karte nicht angezeigt wird, versuche das</string>
+    <string name="confirm_selection">Auswahl bestätigen</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d Datei/Ordner</item>
-        <item quantity="other">%1$d Dateien/Ordner</item>
+        <item quantity="one">%1$d Element</item>
+        <item quantity="other">%1$d Elemente</item>
     </plurals>
 
     <!-- Storages -->
@@ -91,7 +91,7 @@
     <!-- File properties -->
     <string name="properties">Eigenschaften</string>
     <string name="path">Pfad</string>
-    <string name="items_selected">Dateien ausgewählt</string>
+    <string name="items_selected">Ausgewählte Elemente</string>
     <string name="direct_children_count">Enthaltene Elemente (direkt)</string>
     <string name="files_count">Enthaltene Dateien (gesamt)</string>
     <string name="resolution">Auflösung</string>
@@ -117,8 +117,8 @@
     <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf "Benutzerdefiniert"</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
-    <string name="undo_changes">Änderungen rückgängig machen</string>
-    <string name="undo_changes_confirmation">Bist du sicher, dass du die Änderungen rückgängig machen willst?</string>
+    <string name="undo_changes">Änderungen verwerfen</string>
+    <string name="undo_changes_confirmation">Bist du sicher, dass du die Änderungen verwerfen willst?</string>
     <string name="save_before_closing">Du hast ungespeicherte Änderungen. Speichern vorm Beenden?</string>
 
     <!-- What's new -->
@@ -167,14 +167,14 @@
     <string name="wrong_pattern">Falsches Muster</string>
     <string name="repeat_pattern">Muster wiederholen</string>
     <string name="fingerprint">Fingerprint</string>
-    <string name="add_fingerprint">Add fingerprint</string>
-    <string name="place_finger">Please place your finger on the fingerprint sensor</string>
-    <string name="authentication_failed">Authentication failed</string>
-    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
-    <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
-    <string name="go_to_settings">Go to Settings</string>
+    <string name="add_fingerprint">Fingerabdruck hinzufügen</string>
+    <string name="place_finger">Bitte den Finger auf den Fingerabdruck-Sensor legen</string>
+    <string name="authentication_failed">Authentifizierung fehlgeschlagen</string>
+    <string name="authentication_blocked">Authentifizierung blockiert, bitte in Kürze erneut versuchen</string>
+    <string name="no_fingerprints_registered">Keine Fingerabdrücke registriert, bitte in den Geräteeinstellungen hinzufügen</string>
+    <string name="go_to_settings">Einstellungen öffnen</string>
     <string name="protection_setup_successfully">Muster/PIN erfolgreich gespeichert. Falls vergessen, muss die App neu installiert werden.</string>
-    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
+    <string name="fingerprint_setup_successfully">Schutz erfolgreich eingerichtet. Falls beim Zurücksetzen Probleme auftreten, bitte die App neu installieren.</string>
 
     <!-- Times -->
     <plurals name="seconds">
@@ -235,5 +235,5 @@
     <string name="stetho_title">Stetho (Datenbanken debuggen)</string>
     <string name="otto_title">Otto (Event Bus)</string>
     <string name="photoview_title">PhotoView (Zoombare GIFs)</string>
-    <string name="pattern_title">PatternLockView (pattern protection)</string>
+    <string name="pattern_title">PatternLockView (Schutz mit Muster)</string>
 </resources>
